# broker-fastapi-backend

./: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml
alpaca-py_tests/: fake_test.py  test.py
app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
app/config/: plaid.py
app/models/: models.py
app/routers/: routes.py
app/schemas/: schemas.py
app/services/: crud.py
app/utils/: utils.py
backend/: main.py
backend/config/: database.py  plaid.py
backend/routers/: routes.py
backend/routes/: routes.py
backend/schemas/: schemas.py
backend/services/: crud.py
backend/utils/: constants.py  utils.py
cognito_tests/: auth_jwt.py  confirm_signup.py  exceptions.py  get_user.py  initiate_auth.py  jwt_decode.py  resend_confirmation.py  signup.py  token_utils.py
frontend/: package-lock.json  package.json  site_config.json
frontend/src/: App.jsx  App.scss  Link.js  index.css  index.jsx
routers/: routes.py
schemas/: models.py
