[tool.poetry]
name = "broker-backend-fastapi"
version = "0.1.0"
description = "An example backend for Alpaca Broker API using FastAPI"
authors = ["Andrew Wood <23269446+andrewwoood@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7.1"
alpaca-py = "^0.5.4"
cognitojwt = "^1.4.1"
boto3 = "^1.24.58"
fastapi = {extras = ["all"], version = "^0.80.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
